@@ -6,6 +6,8 @@ CHANGES IN FLTK 1.1.8
 	  STR #1742, STR #1777, STR #1794, STR #1827, STR #1843,
 	  STR #1796, STR #1815, STR #1726, STR #1753, STR #1855,
 	  STR #1862, STR #1867, STR #1874)
+	- Fixed image read for partial regions on X11 
+	  (STR #1716)
 	- Fixed KDE/Gnome icon paths (STR #1795)
 	- Fixed Tab key to wrap around menu bars (STR #1877)
 	- Fixed possible timer leak in Scrollbar (STR #1880)
